--- a/lab_8/lab_8.csproj
+++ b/lab_8/lab_8.csproj
@@ -4,15 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{259A91C9-2D30-409D-BC7E-D9D90FD8068F}</ProjectGuid>
+    <ProjectGuid>{3FB0245C-BDEE-489F-B3FB-480A35C33E24}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>lab_4_1_</RootNamespace>
-    <AssemblyName>lab_4%281%29</AssemblyName>
+    <RootNamespace>lab_8</RootNamespace>
+    <AssemblyName>lab_8</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,6 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="help.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
