--- a/MyLibrary/MyLibrary.csproj
+++ b/MyLibrary/MyLibrary.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleDialog.cs" />
+    <Compile Include="Functions.cs" />
     <Compile Include="MyDate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
